# iDMETpy

./: FIN.json  FNAME.RData  FNAME.json  LICENSE  README.md  gclass.RData  gclass.json  pyproject.toml  step1.py
data/: FIN.RData  Rsub.parquet
src/idmetpy/: __init__.py  main.py
