[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iDMETpy"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" }, # Placeholder - update later
]
description = "A Python package for Network-based approach for integrating differential analysis of cancer metabolomics, translated from the R iDMET."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
]

[project.urls]
"Homepage" = "https://github.com/integMET/iDMETpy"
"Bug Tracker" = "https://github.com/integMET/iDMETpy/issues"
"Source" = "hhttps://github.com/integMET/iDMETpy"

[tool.setuptools.packages.find]
where = ["src"]