[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idmetpy"
version = "0.1.0"
authors = [
  { name="Kozo Nishida", email="kozo.nishida@gmail.com" },
]
description = "A Python package for Network-based approach for integrating differential analysis of cancer metabolomics, translated from the R iDMET."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "networkx"
]

[project.urls]
"Homepage" = "https://github.com/integMET/idmetpy"
"Bug Tracker" = "https://github.com/integMET/idmetpy/issues"
"Source" = "hhttps://github.com/integMET/idmetpy"
